--- a/css/main.css
+++ b/css/main.css
@@ -72,4 +72,35 @@ h2 {
   text-align: center;
 }
 
+hr {
+  width: 40%;
+}
+
+.mattress {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 2rem;
+}
+.mattress .catalog-img {
+  width: 300px;
+}
+
+.delete {
+  text-align: center;
+}
+.delete a {
+  display: inline-block;
+  margin: 1rem 0;
+  color: white;
+  background-color: transparent;
+  border: none;
+  text-decoration: none;
+  padding: 1.5rem 2.5rem;
+  border-radius: 2px;
+}
+.delete a:hover {
+  border: 1px solid #efefef;
+}
+
 /*# sourceMappingURL=main.css.map */
