--- a/sass/main.scss
+++ b/sass/main.scss
@@ -35,7 +35,7 @@ header {
     border-radius: 1rem;
 
     .btn {
-        @include m.button
+        @include m.button(transparent)
     }
 }
 
@@ -62,6 +62,7 @@ hr {
     text-align: center;
 
     a {
-        @include m.button
+        @include m.button(v.$color-primary);
+        margin: 2rem;
     }
 }
